# adblock-compiler

./: .dev.vars.example  .dockerignore  .env  .env.development  .env.example  .env.production  .envrc  .gitignore  .pre-commit-config.yaml  .trivyignore  AGENTS.md  BUGS_AND_FEATURES.md  CHANGELOG.md  CHANGES_SUMMARY.txt  CLAUDE.md  CODE_REVIEW.md  CONTRIBUTING.md  DEPENDENCIES.md  Dockerfile  Dockerfile.container  LICENSE  MEMORY.md  MODERNIZATION_CHANGES.md  MONOREPO.md  PRODUCTION_READINESS.md  PR_SUMMARY.md  PULL_REQUEST_TEMPLATE.md  README.md  REVIEW_SUMMARY.md  RTM-TODO.md  SECURITY.md  VERSION_MANAGEMENT.md  ZDOM_REFACTOR_VALIDATION_REPORT.md  asconfig.json  book.toml  codecov.yaml  codecov.yml  deno.json  deno_temp.json  display-ast.ts  (+21 more)
.claude/: HOOKS.md  settings.json
.github/: WORKFLOW_CLEANUP_SUMMARY.md  actionlint.yaml  copilot-instructions.md  copilot-setup-steps.yml  dependabot.yml  pull_request_template.md
.postman/: resources.yaml
.projects/: state.json  state.local.json
.stripe/: architecture.md  implementation-guide.md
admin-migrations/: 0001_admin_schema.sql  0002_agent_scope_seed.sql  0003_rename_clerk_user_id.sql
assembly/: README.md  index.ts  wildcard.ts
data/: logs-2026-04-11T16_08_48.624Z.json  logs-2026-04-11T17_02_18.240Z.json
docs/: 404.md  AUTO_VERSION_BUMP.md  CIRCUIT_BREAKER.md  CLOUDFLARE_ANALYTICS.md  DEPLOYMENT_VERSIONING.md  DOCKER.md  ENV_CONFIGURATION.md  FRAMEWORK_POCS.md  OPENAPI_TOOLING.md  PITCH_SUMMARY.md  POSTMAN_TESTING.md  README.md  SPA_BENEFITS.md  SUMMARY.md  VERSION_MANAGEMENT.md  VITE.md  WASM.md  WORKER_E2E_TESTS.md  ZOD_VALIDATION.md  api-reference.md  cloudflare-resource-inventory.md
docs-docusaurus/: .gitignore  README.md  docusaurus.config.ts  package.json  sidebars.ts  wrangler.docs-docusaurus.toml
docs-starlight/: README.md  astro.config.ts  package.json  tsconfig.json  wrangler.docs-starlight.toml
examples/: circuit-breaker-usage.ts  diagnostics-usage.ts  error-reporting-usage.ts  module-log-levels-example.ts  opentelemetry-example.ts  structured-logging-example.ts  structured-logging-standalone.ts  wasm-usage.ts
frontend/: .browserslistrc  README.md  angular.json  package.json  server.ts  tsconfig.app.json  tsconfig.json  vitest.config.ts  wrangler.toml
ideas/: ADGUARD_DNS_API_INTEGRATION.md  ADGUARD_HOME_INTEGRATION.md  AI_CLOUDFLARE_INTEGRATION.md  CLOUDFLARE_DYNAMIC_WORKERS.md  CLOUDFLARE_MESH.md  (+17 more)
tools/: .marimo.toml  .marimo.toml.example  DEPLOYMENT.md  MCP-INTEGRATION.md  README.md  auth-healthcheck.env.example  auth-healthcheck.py  pyproject.toml
tools/docs/auth-healthcheck/: README.md
tools/runbooks/: README.md  auth-healthcheck.py  dashboard.py  error-analysis.py  gallery-demo.py  pipeline.py  requirements.txt
tools/runbooks/shared/: __init__.py
tools/tests/: conftest.py  test_runbooks.py
tools/theming/: bloqr-theme.css
(+1127 files in other folders)
