[project]
name = "adblock-compiler-tools"
version = "0.1.0"
description = "Operational tooling and runbooks for adblock-compiler"
requires-python = ">=3.11"
dependencies = [
    "marimo>=0.8.0",
    "requests>=2.31.0",
    "rich>=13.0.0",
    "psycopg2-binary>=2.9.9",
    "pytest>=8.0.0",
    "pytest-timeout>=2.3.0",
]

[tool.uv]
dev-dependencies = [
    "ruff>=0.9.0",
    "ty>=0.0.1a0",
]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "RUF"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ty]
# Type checking configuration for ty (Astral)
python-version = "3.11"

[tool.pytest.ini_options]
testpaths = ["runbooks/tests", "tests"]
timeout = 60
