[project]
name = "bloqr-backend-tools"
version = "0.1.0"
description = "Operational tooling and runbooks for bloqr-backend"
requires-python = ">=3.11"
dependencies = [
    # 0.17.0 is the minimum version that introduced MCP server support
    # https://github.com/marimo-team/marimo/releases/tag/0.17.0
    "marimo[lsp,mcp]>=0.17.0",
    "requests>=2.31.0",
    "rich>=13.0.0",
    "psycopg2-binary>=2.9.9",
    "pytest>=8.0.0",
    "pytest-timeout>=2.3.0",
    # Marimo optional features
    "anthropic>=0.25.0",
    "duckdb>=1.0.0",
    "altair>=5.4.0",
    "polars[pyarrow]>=1.9.0",
    "sqlglot[c]>=23.4",
    "nbformat>=5.7.0",
    "vegafusion>=2.0.0",
    "vl-convert-python>=1.0.0",
]

[dependency-groups]
dev = [
    # Astral toolchain
    "ruff>=0.9.0",
    "ty>=0.0.1a0",
    # pylsp — powers marimo's inline language server
    # https://docs.marimo.io/guides/editor_features/language_server/
    "python-lsp-server[websockets]>=1.12.0",
    # pylsp-ruff — replaces pycodestyle/pyflakes with ruff inside pylsp
    "python-lsp-ruff>=2.2.0",
]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "RUF"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ty]
# Astral type checker — https://github.com/astral-sh/ty

[tool.pytest.ini_options]
testpaths = ["runbooks/tests", "tests"]
timeout = 60

[tool.marimo.language_servers.pylsp]
enabled = true               # Enable/disable pylsp
enable_mypy = false          # Use ty (Astral) for type checking instead of mypy
enable_ruff = true           # Linting with ruff (enabled by default, if installed)
enable_flake8 = false        # Linting with flake8
enable_pydocstyle = false    # Check docstring style
enable_pylint = false        # Linting with pylint
enable_pyflakes = false      # Syntax checking with pyflakes

[tool.marimo.language_servers.ty]
enabled = true

[tool.marimo.completion]
copilot = "github"